# pompote-view

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/agents/: agathe.md  infra-local.md  pompote.md  rust-reviewer.md  svelte-frontend.md  svelte-reviewer.md  viz-backend.md
.github/workflows/: check.yml
backend/: Cargo.toml  README.md
backend/.sqlx/: query-52eeef01f4514c1a806e5dafbd7808d07864dad07b91476563d60e2800b18168.json  query-7cce77b885f7025b27dfb5f8c3ad5ed0c8c3dd24c613e8ff93cd301b2e7e9df9.json
backend/crates/adapters/: Cargo.toml
backend/crates/adapters/src/: lib.rs
backend/crates/adapters/src/inbound/: mod.rs
backend/crates/adapters/src/inbound/http/: api_key.rs  candles.rs  handlers.rs  mod.rs  openapi.rs  orders.rs  router.rs  state.rs
backend/crates/adapters/src/outbound/: clock.rs  mod.rs  persistence.rs
backend/crates/adapters/src/outbound/persistence/: candles.rs  health.rs  mod.rs  orders.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: lib.rs
backend/crates/application/src/ports/: candle_repository.rs  clock.rs  health.rs  mod.rs  order_repository.rs
backend/crates/application/src/use_cases/: candles.rs  mod.rs  orders.rs  readiness.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/domain/src/candle/: entity.rs  mod.rs  timeframe.rs
backend/crates/domain/src/order/: entity.rs  mod.rs  side.rs  status.rs
backend/crates/viz_api/: Cargo.toml
backend/crates/viz_api/src/: config.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/lib/components/: AppLayout.svelte  AppLayout.svelte.spec.ts
frontend/src/routes/: +layout.svelte  +page.svelte
