[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/PierreAttard/pompote-view"
authors = ["Pierre Attard"]
rust-version = "1.85"

[workspace.dependencies]
# Hexagonal workspace crates (path deps, internal only)
domain = { path = "crates/domain" }
application = { path = "crates/application" }
adapters = { path = "crates/adapters" }

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"

# Database (read-only access via pompote_viz_reader role).
# `rust_decimal` feature enables `Decimal` <-> Postgres `NUMERIC` mapping,
# required for OHLC prices and volumes which we never want to lose precision
# on at the I/O boundary (see `domain::candle`).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "migrate",
    "rust_decimal",
    "uuid",
] }

# Fixed-precision decimals for prices/volumes coming from Postgres `NUMERIC`.
# Used in `domain` (no I/O dep), `adapters/outbound/persistence` (sqlx), and
# at the JSON serialisation boundary in `adapters/inbound/http` (where we
# explicitly down-cast to `f64` for Lightweight Charts consumption).
rust_decimal = { version = "1", default-features = false, features = ["serde-with-str"] }

# OpenAPI + Swagger UI + TypeScript client generation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# UUIDs for path params and `orders` rows. `domain` consumes only the
# pure-Rust core (no I/O); `adapters` enables `sqlx` for `Uuid` <-> Postgres
# `uuid` mapping. `serde` lets DTOs round-trip in handlers/tests.
uuid = { version = "1", default-features = false, features = ["std", "serde", "v4"] }

# Async traits (ports defined in `application`)
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Constant-time byte comparison (api_key middleware)
subtle = "2.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
