[package]
name = "adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# Adapters crate (option `a` from issue #7): regroups inbound HTTP (axum)
# and outbound persistence (sqlx) + clock under a single Cargo target with
# internal sub-modules. We will split into per-adapter crates if a specific
# adapter grows large enough to justify the boilerplate.

[dependencies]
application.workspace = true
domain.workspace = true

axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
subtle.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
