[package]
name = "application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# Application crate: use cases + ports (traits implemented by adapters).
# MUST NOT depend on axum or sqlx. Allowed: domain, async-trait, thiserror,
# serde, chrono, tokio (for async primitives, no `full` feature here).

[dependencies]
domain.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true }
