[package]
name = "domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# Pure domain crate: entities, value objects, business rules.
# MUST NOT depend on axum, sqlx, tokio runtime, or any I/O crate.
# Allowed dependencies: serde, chrono, thiserror only.

[dependencies]
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
