[package]
name = "domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# Pure domain crate: entities, value objects, business rules.
# MUST NOT depend on axum, sqlx, tokio runtime, or any I/O crate.
# Allowed dependencies: serde, chrono, thiserror, rust_decimal (no I/O,
# `no_std`-friendly fixed-precision type — chosen over `f64` for OHLC and
# volumes since these are money values produced by a `NUMERIC(20,8)` column).

[dependencies]
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
# `uuid` is pure Rust (no I/O), so the dependency rule is preserved.
uuid.workspace = true
