[package]
name = "viz_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# `viz_api` is the composition root (hexagonal "bootstrap" crate):
# it owns `fn main()`, reads the env config, builds the sqlx pool, wires
# the adapters into the application use cases, and starts the axum server.
# It contains no business logic.

[[bin]]
name = "viz_api"
path = "src/main.rs"

[dependencies]
application.workspace = true
adapters.workspace = true

axum.workspace = true
tokio.workspace = true
sqlx.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
